--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,4 +1,5 @@
 <div id="app container">
+  
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
       <search><h5><em>search</em> component goes here</h5></search>
@@ -10,6 +11,7 @@
     </div>
     <div class="col-md-5">
       <video-list><h5><em>videoList</em> component goes here</h5></video-list>
+      <pre>{{vm.videoList.length}}</pre>
     </div>
   <div>
 </div>
