--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-md-7">
       <video-player current="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
-      <!-- <pre>{{$ctrl.currentVideo}}</pre> -->
+      <pre>{{$ctrl.currentVideo}}</pre>
     </div>
     <div class="col-md-5">
       <video-list videos="$ctrl.videoList"><h5><em>videoList</em> component goes here</h5></video-list>
