--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,9 +1,9 @@
 <div class="video-player">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1w8Z0UOXVaY" allowFullScreen></iframe>
+    <iframe class="embed-responsive-item" src={{"https://www.youtube.com/embed/"+$ctrl.current.id.videoId}} allowFullScreen></iframe>
   </div>
   <div class="video-player-details">
-    <h3>Title Here {{ $ctrl.current.snippet.title }}</h3>
-    <div>Description {{ $ctrl.current.snippet.description }}</div>
+    <h3>{{ $ctrl.current.snippet.title }}</h3>
+    <div>{{ $ctrl.current.snippet.description }}</div>
   </div>
 </div>
