--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,7 +1,6 @@
 <ul class="video-list">
   <div class="does-this-div-show">
-  <video-list-entry ng-repeat="video in $ctrl.videos track by $index" video="video" >
+  <video-list-entry ng-repeat="video in $ctrl.videos track by $index" on-click="$ctrl.onClick" video="video">
   </video-list-entry>
   </div>
-  <pre>{{$ctrl.videos.length}}</pre>
 </ul>
