--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,9 +1,10 @@
 <div class="video-player">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src={{"https://www.youtube.com/embed/"+$ctrl.current.id.videoId}} allowFullScreen></iframe>
+    <iframe class="embed-responsive-item" src={{"https://www.youtube.com/embed/"+$ctrl.video.id.videoId}} allowFullScreen></iframe>
   </div>
   <div class="video-player-details">
-    <h3>{{ $ctrl.current.snippet.title }}</h3>
-    <div>{{ $ctrl.current.snippet.description }}</div>
+    <h3>{{ $ctrl.video.snippet.title }}</h3>
+    <div>{{ $ctrl.video.snippet.description }}</div>
+    <!-- <pre>{{$ctrl.currentVideo.id.videoId}}</pre> -->
   </div>
 </div>
