--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -2,15 +2,15 @@
   
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search><h5><em>search</em> component goes here</h5></search>
+      <search result="$ctrl.searchResults"></search>
     </div>
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
+      <video-player video="$ctrl.currentVideo"></video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videoList" on-click="$ctrl.changeVideo" ><h5><em>videoList</em> component goes here</h5></video-list>
+      <video-list videos="$ctrl.videos" on-click="$ctrl.selectVideo" result="$ctrl.searchResults"></video-list>
     </div>
   </div>
 </div>
